@@ -11,6 +11,7 @@
 * Added methods for retrieving expires, active, inactive, and non-expired teams; and printing team manager emails
 * Added the --expired and --unexpired for listing teams via CLI, and also incorporated the --active when listing teams in the CLI.  Added the state and expiration date to the team listing output.
 * Added the --config arg for the asset CLI command to specify a config file
+* Added methods for deleting subnets, deleting internet gateways, deleting VPCs, and deleting the default VPC
 
 0.0.12
 ======
